--- a/css/home.css
+++ b/css/home.css
@@ -58,6 +58,9 @@ img {
     padding: 0 var(--default-padding);
     border-radius: 5px;
 }
+.tic-tac-toe {
+    width: 70%;
+}
 
 @media screen and (min-width: 1000px) {
     /* PROFILE */
@@ -83,5 +86,10 @@ img {
         color: black;
         box-shadow: var(--card-shadow);
         transition: background-color .2s, color .2s, box-shadow .2s;
+    }
+    .card a{
+        width: 30%;
+        padding: 0.5rem;
+        text-align: center;
     }
 }
