fix file structure and img links

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,8 @@ footer img:hover{
     position: relative;
     z-index: 10;
     border: none;
-    background: white;
+    background: var(--primary-color);
+    color: white;
     cursor: pointer;
   }
   .closeIcon {
@@ -95,7 +96,7 @@ footer img:hover{
   }
   .menu {
     position: fixed;
-    transform: translateX(100%);
+    transform: translateY(-100%);
     transition: transform 0.2s;
     top: 0;
     left: 0;
