--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,23 @@
     font-family: "Gabarito";
     src: url();
 }
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+.material-icons.white { color: white }
 
 :root{ 
     --primary-color: lightblue;
     --secondary-color: #0c2c776c;
     --text-color: white;
     --default-padding: 1rem;
+    --mobile-padding: .25rem;
     --card-shadow: 0 0 3px rgba(0, 0, 0, 0.432)
 }
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -26,31 +34,132 @@ body{
     flex-direction: column;
     justify-content: space-between;
 }
-header, footer {
-    width: 100%;
-    min-height: 4rem;
-    padding: var(--default-padding);
-    background-color: var(--primary-color);
-    color: var(--text-color);
-    display: flex;
-    align-items: center;
-}
 
 /* HEADER */
 header {
-    flex-direction: column;
-    gap: 1rem;
-}
-.header-navigation {
-    list-style-type: none;
+    margin: 1em 0;
     display: flex;
-    gap: 3rem;
-    padding-bottom: var(--default-padding);
+    justify-content: center;
 }
-.header-navigation a {
-    text-decoration: none;
-    font-size: large;
-    color: var(--text-color);
+.title{
+    font-size: 40px;
+    position: relative;
+    color: var(--primary-color);
+    /* display: inline-block; */
+
+    &::before,
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+    }
+
+    &::before {
+        background: white;
+        z-index: -1;
+        top: -1px;
+        bottom: -1px;
+        left: -1rem;
+        right: -1rem;
+    }
+
+    &::after {
+        background-color: var(--primary-color);
+        height: 100%;
+        width: 100vw;
+        left: 50%;
+        top: 0;
+        transform: translateX(-50%);
+        z-index: -2;
+    }
+}
+
+/* NAVIGATION MENU */
+.navLinks {
+    display: flex;
+    justify-content: center;
+}
+
+.trigger {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--primary-color);
+    outline: 0;
+    border: none;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 5px;
+}
+
+.full-screen-nav {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: .25s ease-out;
+    display: none;
+}
+
+.open-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.backdrop{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(0 0 0 / .95);
+    animation: fadeIn .25s ease-out forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        top: -100%;
+        opacity: 0;
+    } to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+ul {
+    z-index: 99;
+    position: relative;
+}
+ul li {
+    list-style: none;
+    text-align: center;
+    margin-bottom: 2rem;
+    animation: .25s ease-out animateList forwards;
+}
+ul li:last-child{
+    margin-bottom: 0;
+}
+@keyframes animateList {
+   from {
+    margin-top: -60px;
+    opacity: 0;
+   } to {
+    margin-top: 60px;
+    opacity: 1;
+   }
+}
+
+ul li a {
+	text-decoration: none;
+	color: #ccc;
+	font-size: 2em;
+	font-weight: 900;
+	text-transform: uppercase;
+	transition: 0.15s ease-in-out;
+}
+ul li a:hover,
+ul li a i {
+	color: var(--primary-color);
 }
 
 /* MAIN */
@@ -60,14 +169,47 @@ main{
 
 /* FOOTER */
 footer{
-    justify-content: space-between;
+    display: flex;
+    justify-content: center;
+    padding-top: 3rem;
 }
-footer img {
+.footer-links img {
     height: 2rem;
+    width: auto;
 }
-footer img:hover{
-    scale: 1.2;
-    transition: scale .2s;
+
+.footer-links {
+    width: 70%;
+    padding: .5rem;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+
+    &::before,
+    &::after {
+        content: '';
+        display: block;
+        height: 100%;
+        position: absolute;
+    }
+    &::before {
+        background: white;
+        z-index: -1;
+        top: 0;
+        left: -1rem;
+        right: -1rem;
+        height: 101%;
+    }
+
+    &::after {
+        background-color: var(--primary-color);
+        width: 100vw;
+        left: 50%;
+        top: 0;
+        transform: translateX(-50%);
+        z-index: -2;
+    }
 }
 
 /* CARD HOVER */
@@ -76,38 +218,16 @@ footer img:hover{
         justify-content: space-around;
     }
     .card:hover {
-        scale: 1.05;
+        scale: 1.01;
         background-color: var(--secondary-color);
         box-shadow: var(--card-shadow);
-        transition: scale 0.2s, background-color .2s;
+        transition: all .2s;
+    }
+    footer img:hover{
+        scale: 1.2;
+        transition: scale .2s;
+    }
+    .footer-links {
+        width: 50%;
     }
 }
-
-.hamburger {
-    position: relative;
-    z-index: 10;
-    border: none;
-    background: var(--primary-color);
-    color: white;
-    cursor: pointer;
-  }
-  .closeIcon {
-    display: none;
-  }
-  .menu {
-    position: fixed;
-    transform: translateY(-100%);
-    transition: transform 0.2s;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 9;
-    background: rgba(0, 0, 0, 0.192);
-    color: white;
-    list-style: none;
-    padding-top: 4rem;
-  }
-  .showMenu {
-    transform: translateX(0);
-  }
