--- a/css/home.css
+++ b/css/home.css
@@ -2,9 +2,65 @@
     text-decoration: underline;
 }
 
+
+
+
+
+
+
 /* PROFILE */
-img {
-    width: min(500px, 100%);
+.image-wrapper,
+.text-wrapper {
+    width: min(600px, 100%);
+    height: 99%;
+    overflow: hidden;
+}
+.image-wrapper {
+    background: black;
+    position: relative;
+}
+.image-wrapper img {
+    width: 100%;
+    object-fit: cover;
+    transition: .3s;
+}
+.image-wrapper button {
+    font-size: 1.5rem;
+    font-weight: 900;
+    padding: 1rem 3rem;
+    background-color: white;
+    outline: 0;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 10px black;
+}
+.image-wrapper a {
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .3s;
+    opacity: 0; /* change after styling */
+}
+.image-wrapper a:hover button{
+    scale: 1.05;
+    background-color: var(--primary-color);
+    box-shadow: 0 0 20px black;
+    transition: all .2s;
+}
+.image-wrapper a:active button {
+    scale: 1;
+    background-color: white;
+    box-shadow: inset 0 0 5px black;
+    transition: all 0s;
+}
+.image-wrapper:hover img {
+    transform: scale(1.2) translateY(35px);
+    opacity: .6;
+}
+.image-wrapper:hover a {
+    opacity: 1;
 }
 .profile-text {
     padding: var(--default-padding);
@@ -15,67 +71,27 @@ img {
     font-size: small;
 }
 .profile-section {
-    padding-top: var(--default-padding);
+    padding: 6rem 0;
     margin: auto;
     border-bottom: 2px solid var(--primary-color);
     display: flex;
     flex-direction: column;
 }
 
+
+
+
+
+
+
+
+
+
+
 /* PROJECTS */
 .project-section {
     padding-top: var(--default-padding);
 }
-.project-section h2 {
-    background-color: var(--primary-color);
-    color: white;
-    text-align: center;
-}
-
-/* .footer-links {
-    width: 70%;
-    padding: .5rem;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-
-    &::before,
-    &::after {
-        content: '';
-        display: block;
-        height: 100%;
-        position: absolute;
-    }
-    &::before {
-        background: white;
-        z-index: -1;
-        top: 0;
-        left: -1rem;
-        right: -1rem;
-        height: 101%;
-    }
-
-    &::after {
-        background-color: var(--primary-color);
-        width: 100vw;
-        left: 50%;
-        top: 0;
-        transform: translateX(-50%);
-        z-index: -2;
-    }
-} */
-
-
-
-
-
-
-
-
-
-
-
 .project-cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(160px, 100%), 1fr));
@@ -93,6 +109,9 @@ img {
     justify-content: space-evenly;
     align-items: center;
 }
+.card img {
+    width: 60%;
+}
 .card a {
     text-decoration: none;
     background-color: var(--primary-color);
@@ -104,13 +123,14 @@ img {
     width: 60%;
 }
 
+/* DESKTOP MEDIA-QUERY */
 @media screen and (min-width: 1000px) {
     /* PROFILE */
     .profile-section {
         max-width: 90%;
         border-bottom: none;
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
         align-items: center;
     }
     .profile-section p {
@@ -118,7 +138,6 @@ img {
         overflow: scroll;
     }
     /* PROJECTS */
-
     .project-cards {
         gap: 2rem;
         margin: 1rem 2rem;
