--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,39 @@ body{
         z-index: -2;
     }
 }
+@media screen and (width > 1000px) {
+    .hover-frame {
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            top: 1.25rem;
+            bottom: 1.25rem;
+            left: 1.25rem;
+            right: 1.25rem;
+        }
+        &::before {
+            border-top: 1px solid white;
+            border-bottom: 1px solid white;
+            transform: scale(0, 1);
+            transition: transform ease-out .25s;
+        }
+        &:hover::before {
+            transform: scale(1.05, 1);
+        }
+        &::after{
+            border-left: 1px solid white;
+            border-right: 1px solid white;
+            transform: scale(1, 0);
+            transition: transform ease-out .25s;
+        }
+        &:hover::after {
+            transform: scale(1, 1.05);
+        }
+    }
+}
 .banner {
-    margin: 1em 0;
+    margin: 6vh 0;
     display: flex;
     justify-content: center;
 }
@@ -79,7 +110,7 @@ header {
     justify-content: center;
 }
 .title{
-    font-size: 40px;
+    font-size: calc(2rem + 2vw);
     position: relative;
     color: var(--primary-color);
 }
@@ -184,10 +215,9 @@ main{
 footer{
     display: flex;
     justify-content: center;
-    padding-top: 3rem;
 }
 .footer-links img {
-    height: 2rem;
+    height: 2.5rem;
     width: auto;
 }
 .footer-links {
@@ -196,17 +226,10 @@ footer{
     position: relative;
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
 }
 
 /* UNIVERSAL MEDIA-QUERY FOR DESKTOP */
-@media screen and (min-width: 1000px) {
-    .title {
-        font-size: 70px;
-    }
-    footer {
-        justify-content: space-around;
-    }
+@media screen and (width >= 1000px) {
     .card:hover {
         scale: 1.01;
         background-color: var(--secondary-color);
