--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ body{
         z-index: -2;
     }
 }
+
 @media screen and (width > 1000px) {
     .hover-frame {
         &::before,
@@ -93,7 +94,7 @@ body{
     }
 }
 .banner {
-    margin: calc(1em + 2vw) 0;
+    margin: calc(1rem + 2vw) 0;
     display: flex;
     justify-content: center;
 }
@@ -231,6 +232,15 @@ footer{
 
 /* UNIVERSAL MEDIA-QUERY FOR DESKTOP */
 @media screen and (width >= 1000px) {
+    .trigger:hover {
+        scale: 1.1;
+        box-shadow: 0 0 5px black;
+        transition: all .2s;
+    }
+    .trigger:active {
+        scale: 1;
+        box-shadow: inset 0 0 5px black;
+    }
     .card:hover {
         scale: 1.01;
         background-color: var(--secondary-color);
