--- a/css/cv.css
+++ b/css/cv.css
@@ -50,6 +50,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 .card img{
     margin-top: auto;
@@ -105,4 +106,12 @@ dialog p {
 }
 .material-icons.md-36 {
     font-size: 36px;
+}
+
+@media screen and (width >= 1000px) {
+    .card:active {
+        scale: 0.98;
+        box-shadow: inset 0 0 5px;
+        transition: all 0s;
+    }
 }
