--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,7 @@
     font-family: 'Gabarito';
     line-height: 1.2;
 }
-html,
-body {
-    min-height: 100vh;
 
-}
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
@@ -42,50 +38,15 @@ body {
     &::before {
         background: white;
         z-index: -1;
-        top: -1px;
-        bottom: -1px;
-        left: -1rem;
-        right: -1rem;
+        inset: -1px -1rem;
     }
     &::after {
         background-color: var(--primary-color);
         height: 100%;
         width: 100vw;
-        left: 50%;
-        top: 0;
-        transform: translateX(-50%);
+        inset: 0 50% auto auto;
+        transform: translateX(50%);
         z-index: -2;
-    }
-}
-@media screen and (width > 1000px) {
-    .hover-frame {
-        &::before,
-        &::after {
-            content: '';
-            position: absolute;
-            top: 1.25rem;
-            bottom: 1.25rem;
-            left: 1.25rem;
-            right: 1.25rem;
-        }
-        &::before {
-            border-top: 1px solid white;
-            border-bottom: 1px solid white;
-            transform: scale(0, 1);
-            transition: transform ease-out .25s;
-        }
-        &:hover::before {
-            transform: scale(1.05, 1);
-        }
-        &::after{
-            border-left: 1px solid white;
-            border-right: 1px solid white;
-            transform: scale(1, 0);
-            transition: transform ease-out .25s;
-        }
-        &:hover::after {
-            transform: scale(1, 1.05);
-        }
     }
 }
 .banner {
@@ -95,7 +56,7 @@ body {
 }
 .banner h2 {
     color: var(--primary-color);
-    font-size: calc(1.5rem + 1vw);
+    font-size: clamp(1rem, 1rem + 2.5vw, 3rem);
     position: relative;
 }
 
@@ -106,7 +67,7 @@ header {
     justify-content: center;
 }
 .title{
-    font-size: calc(2.5rem + 2vw);
+    font-size: clamp(3rem, 1rem + 5vw, 6rem);
     position: relative;
     color: var(--primary-color);
 }
@@ -129,10 +90,7 @@ header {
 }
 .full-screen-nav {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    inset: 0 0 0 0;
     transition: .25s ease-out;
     display: none;
     z-index: 1;
@@ -163,9 +121,6 @@ ul li {
     margin-bottom: 2rem;
     animation: .25s ease-out animateList forwards;
 }
-ul li:last-child{
-    margin-bottom: 0;
-}
 ul li a {
 	text-decoration: none;
 	color: #ccc;
@@ -182,7 +137,6 @@ ul li a i {
     vertical-align: middle;
     margin-right: 1rem;
 }
-
 /* KEYFRAMES */
 @keyframes animateList {
    from {
@@ -202,12 +156,6 @@ ul li a i {
         opacity: 1;
     }
 }
-
-/* MAIN */
-main{
-    height: 100%;
-}
-
 /* FOOTER */
 footer{
     display: flex;
@@ -215,7 +163,6 @@ footer{
 }
 .footer-links img {
     height: calc(2rem + .5vw);
-    width: auto;
 }
 .footer-links {
     width: 70%;
@@ -223,29 +170,4 @@ footer{
     position: relative;
     display: flex;
     justify-content: space-between;
-}
-
-/* UNIVERSAL MEDIA-QUERY FOR DESKTOP */
-@media screen and (width >= 1000px) {
-    .trigger:hover {
-        scale: 1.1;
-        box-shadow: 0 0 5px black;
-        transition: all .2s;
-    }
-    .trigger:active {
-        scale: 1;
-        box-shadow: inset 0 0 5px black;
-    }
-    .card:hover {
-        background-color: var(--secondary-color);
-        box-shadow: var(--card-shadow);
-        transition: all .2s;
-    }
-    footer img:hover{
-        scale: 1.1;
-        transition: scale .2s;
-    }
-    .footer-links {
-        width: 50%;
-    }
 }
