cursor switch on hover

--- a/css/contact.css
+++ b/css/contact.css
@@ -15,15 +15,15 @@
     display: flex;
     flex-direction: column;
 }
-img {
+main img {
     height: 2rem;
     vertical-align: middle;
     margin-right: var(--default-padding);
 }
-main a:hover {
+/* main a:hover {
     color: var(--secondary-color);
     transition: color .2s;
-}
+} */
 /* MESSAGE */
 .message-form {
     display: flex;
