--- a/css/media.css
+++ b/css/media.css
@@ -47,15 +47,11 @@
         scale: 1.1;
         box-shadow: 0 0 5px black;
         transition: all .2s;
+        cursor: pointer;
     }
     .trigger:active {
         scale: 1;
         box-shadow: inset 0 0 5px black;
-    }
-    .card:hover {
-        background-color: var(--secondary-color);
-        box-shadow: var(--card-shadow);
-        transition: all .2s;
     }
     footer img:hover{
         scale: 1.1;
@@ -76,6 +72,12 @@
     }
     /* ***************** */
     /* CV-CARD HOVER */
+    .card:hover {
+        background-color: var(--secondary-color);
+        box-shadow: var(--card-shadow);
+        transition: all .2s;
+        cursor: pointer;
+    }
     .card:active {
         scale: 0.98;
         box-shadow: inset 0 0 5px;
