--- a/css/contact.css
+++ b/css/contact.css
@@ -3,32 +3,61 @@
 }
 html, 
 body {
-    height: 100vh;
+    min-height: 100vh;
 }
 body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
+/* CONTACT SECTION */
 .contact-section {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-bottom: 2px solid var(--primary-color);
+}
+.contact-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0 calc(1rem + 2vw);
 }
 .contact-info {
-    font-size: clamp(1rem, 1rem + 2.5vw, 1.5rem);
+    font-size: clamp(.5rem, 1rem + 0.5vw, 1.5rem);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
-/* INFO */
-main img {
+.contact-info img {
     height: 2rem;
     vertical-align: middle;
     margin-right: var(--default-padding);
 }
-/* MESSAGE */
+.contact-info a {
+    color: black;
+}
+.map {
+    width: 400px;
+    height: 300px; 
+    max-width: 95%;
+    padding-left: 1rem;
+
+}
+/* MESSAGE SECTION*/
+.message-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 #message-form {
+    width: min(90%, 600px);
     display: flex;
     flex-direction: column;
     gap: var(--default-padding);
+    margin: 0 0 calc(1rem + 2vw);
 }
 input,
 textarea {
