--- a/css/home.css
+++ b/css/home.css
@@ -69,15 +69,15 @@
 .card {
     aspect-ratio: 1/1.2;
     padding: var(--default-padding);
+    background-color: gray;
     border: 1px solid black;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-}
-.card img {
-    width: 60%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .card a {
     text-decoration: none;
